<resources>
    <string name="app_name">android-kotlin-project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_absence">Absence</string>
    <string name="title_note">Note</string>
    <string name="title_support_cours">Support de Cours</string>
    <string name="title_calendrier">Calendrier</string>
    <string name="title_news">News</string>
</resources>