<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lukyss.android_kotlin_project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lukyss.android_kotlin_project.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lukyss.android_kotlin_project.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.lukyss.android_kotlin_project.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_absence"
        android:name="com.lukyss.android_kotlin_project.ui.absence.AbsenceFragment"
        android:label="@string/title_absence"
        tools:layout="@layout/fragment_absence" />

    <fragment
        android:id="@+id/navigation_support_cours"
        android:name="com.lukyss.android_kotlin_project.ui.support_cours.SupportCoursFragment"
        android:label="@string/title_support_cours"
        tools:layout="@layout/fragment_support_cours" />

    <fragment
        android:id="@+id/navigation_calendrier"
        android:name="com.lukyss.android_kotlin_project.ui.calendrier.CalendrierFragment"
        android:label="@string/title_calendrier"
        tools:layout="@layout/fragment_calendrier" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.lukyss.android_kotlin_project.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <activity
        android:id="@+id/mainActivity"
        android:name="com.lukyss.android_kotlin_project.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.lukyss.android_kotlin_project.ui.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>
</navigation>